--- a/Web.Statu/Views/Home/Report.cshtml
+++ b/Web.Statu/Views/Home/Report.cshtml
@@ -108,9 +108,10 @@ XINTEXT (0->0.7mld),
             break;
         case 25:
             ViewBag.Title = "Které politické strany mají největší odpovědnost za vedení ČR?";
+            ViewBag.SocialShareText = "Jak dlouho zodpovídají jednotlivé politické strany za fungování státu a jednotlivé resorty? Které strany jsou tradiční a které se jimi pomalu stávají?";
             ViewBag.SubTitle = "";
             ViewBag.SocialShareTitle = "Které politické strany mají největší odpovědnost za řízení ČR?";
-            ViewBag.SocialImage = $"https://www.hlidacstatu.cz/socialbanner/page?d={DateTime.Now.ToString("d.M.yy")}&v=" + Url.Encode("https://www.hlidacstatu.cz/report/25");
+            ViewBag.SocialImage = $"https://www.hlidacstatu.cz/socialbanner/page?d={DateTime.Now.ToString("d.M.yy")}&v=" + Url.Encode(Request.Url.AbsoluteUri);
             ViewBag.OpenGraphMore = "<meta property=\"og:image:width\" content=\"1920\" />\n"
                     + "<meta property=\"og:image:height\" content=\"1080\" />"
                     + "<meta property=\"og:image:type\" content=\"image/png\" />"
