--- a/Web.Statu/Views/Home/Report.cshtml
+++ b/Web.Statu/Views/Home/Report.cshtml
@@ -107,10 +107,10 @@ XINTEXT (0->0.7mld),
             ViewBag.SubTitle = "Za rok 2018";
             break;
         case 25:
-            ViewBag.Title = "Které politické strany mají největší odpovědnost za vedení ČR?";
+            ViewBag.Title = "Které politické strany mají největší podíl na řízení státu?";
             ViewBag.SocialShareText = "Jak dlouho zodpovídají jednotlivé politické strany za fungování státu a jednotlivé resorty? Které strany jsou tradiční a které se jimi pomalu stávají?";
             ViewBag.SubTitle = "";
-            ViewBag.SocialShareTitle = "Které politické strany mají největší odpovědnost za řízení ČR?";
+            ViewBag.SocialShareTitle = "Které politické strany mají největší podíl na řízení státu?";
             ViewBag.SocialImage = $"https://www.hlidacstatu.cz/socialbanner/page?d={DateTime.Now.ToString("d.M.yy")}&v=" + Url.Encode(Request.Url.AbsoluteUri);
             ViewBag.OpenGraphMore = "<meta property=\"og:image:width\" content=\"1920\" />\n"
                     + "<meta property=\"og:image:height\" content=\"1080\" />"
